--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,11 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.5.1"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.5.1"
+    testRuntime "org.junit.platform:junit-platform-launcher:1.5.1"
+}
+
+test {
+    useJUnitPlatform()
 }
